# notetaker-api

./: .env.example  Cargo.toml  README.md  docker-compose.yml  sqlx-data.json
migrations/: 20230102205814_notes_table.up.sql
src/: config.rs  handlers.rs  main.rs  router.rs
src/router/: hello.rs  notes.rs
